--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "app",
+  "name": "hkex",
   "version": "0.0.1",
-  "description": "hkex",
+  "description": "Web scraper for HKEX latest listed company information",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/coffee test/index.coffee"
   },
   "repository": {
     "type": "git",
