--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bluebird": "^3.4.6",
     "cheerio": "^0.22.0",
     "lodash": "^4.16.6",
+    "moment": "^2.16.0",
     "needle": "^1.3.0"
   },
   "devDependencies": {
