--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '2'
 services:
   hkex:
     image: node
+    ports:
+      - 8111:8080
     volumes:
       - ${COMPOSEROOT}/hkex:/usr/src/app
     env_file: 
