set mtu to fit for wlan network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,8 @@ services:
     env_file: 
       - ../.env
     entrypoint: top -b -d 1000
+
+networks:
+  default:
+    driver_opts:
+      com.docker.network.driver.mtu: 1440
