--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hkex",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Web scraper for HKEX latest listed company information",
   "main": "index.js",
   "scripts": {
@@ -19,16 +19,10 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "cheerio": "^0.22.0",
+    "coffeescript": "^2.3.2",
     "lodash": "^4.16.6",
     "moment": "^2.16.0",
     "needle": "^1.3.0"
   },
-  "devDependencies": {
-    "browserify": "^13.1.1",
-    "coffee-script": "^1.11.1",
-    "coffeeify": "^2.0.1",
-    "debowerify": "^1.5.0",
-    "gulp": "^3.9.1",
-    "vinyl-source-stream": "^1.1.0"
-  }
+  "devDependencies": {}
 }
