--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hkex",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Web scraper for HKEX latest listed company information",
   "main": "index.js",
   "scripts": {
@@ -18,11 +18,11 @@
   "homepage": "https://github.com/twhtanghk/hkex#readme",
   "dependencies": {
     "bluebird": "^3.4.6",
-    "cheerio": "^0.22.0",
+    "cheerio": "^1.0.0-rc.2",
     "coffeescript": "^2.3.2",
     "lodash": "^4.16.6",
     "moment": "^2.16.0",
-    "needle": "^1.3.0"
+    "needle": "^2.2.4"
   },
   "devDependencies": {}
 }
