--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
     "moment": "^2.16.0",
     "needle": "^2.2.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-schedule": "^1.3.2"
+  }
 }
