update for hkex combined advanced serach

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
 ALERT=內幕消息|股份購回
-MQTTURL=wss://mqtt.flespi.io
-MQTTCLIENT=hkex news scrapper
-MQTTUSER=username
-MQTTTOPIC=hkex news
+URL=https://www1.hkexnews.hk/ncms/json/eds/lcisehk1relsdc_<%=page%>.json
