--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "coffeescript": "^2.3.2",
     "lodash": "^4.16.6",
     "moment": "^2.16.0",
-    "needle": "^2.2.4"
+    "needle": "^2.2.4",
+    "stream-to-iterator": "^3.0.2-0",
+    "xlsx": "^0.15.1"
   },
   "devDependencies": {
     "mqtt": "^2.18.8",
